--- a/designSite/search/templates/search.html
+++ b/designSite/search/templates/search.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="/static/css/search.css">
 </head>
 
-<body>
+<body class="font-constantia">
   <!-- top bar -->
   <div class="ui large top fixed menu" id="top-bar">
       <div class="left item">
@@ -40,17 +40,19 @@
               CO-RAD Search
             </div>
             <div class="sixteen wide column">
-                <div class="ui icon my-input-box">
-                  <input id="my-input-box" name="keyword" placeholder="Search..." type="text">
-                  <i class="search icon" id="search-button"></i>
-                </div>
+              <div class="ui fluid action input shadowed">
+                <input style="border-radius: 0px !important;" type="text" id="search-content" placeholder="Search...">
+                <button style="border-radius: 0px !important;" id="search" class="ui icon button squard invert">
+                  <i class="search icon"></i>
+                </button>
+              </div>
             </div>
             <div class="ui breadcrumb">
-                <a class="active section"><span>Paper</span></a>
-                <div class="divider"> | </div>
-                <a class="section"><span>Project</span></a>
-                <div class="divider"> | </div>
-                <a class="section"><span>Upload</span></a>
+                <a data-type="paper" class="selected section CORADSearchSelector"><span>Paper</span></a>
+                <div class="divider"></div>
+                <a data-type="project" class="section CORADSearchSelector"><span>Project</span></a>
+                <div class="divider"></div>
+                <a data-type="upload" class="section CORADSearchSelector"><span>Upload</span></a>
               </div>
           </div>
       </div>
