Update frontend of search, fix some bugs

--- a/designSite/search/templates/search.html
+++ b/designSite/search/templates/search.html
@@ -14,7 +14,7 @@
   <div class="ui large top fixed menu" id="top-bar">
       <div class="left item">
         <div class="top-bar-item">
-            <img id="logo" src="/static/img/logo_gray.png">
+            <img id="top-bar-logo" src="/static/img/logo_gray.png">
         </div>
       </div>
       <div class="right item">
@@ -39,8 +39,8 @@
             <div id="search-title-1">
               CO-RAD Search
             </div>
-            <div class="sixteen wide column">
-              <div class="ui fluid action input shadowed">
+            <div class="twelve wide column">
+              <div class="ui fluid action input" id="index-search-bar">
                 <input style="border-radius: 0px !important;" type="text" id="search-content" placeholder="Search...">
                 <button style="border-radius: 0px !important;" id="search" class="ui icon button squard invert">
                   <i class="search icon"></i>
@@ -48,11 +48,11 @@
               </div>
             </div>
             <div class="ui breadcrumb">
-                <a data-type="paper" class="selected section CORADSearchSelector"><span>Paper</span></a>
+                <a data-type="paper" class="selected section CORADSearchSelector"><span class="shadow-font">Paper</span></a>
                 <div class="divider"></div>
-                <a data-type="project" class="section CORADSearchSelector"><span>Project</span></a>
+                <a data-type="project" class="section CORADSearchSelector"><span class="shadow-font">Project</span></a>
                 <div class="divider"></div>
-                <a data-type="upload" class="section CORADSearchSelector"><span>Upload</span></a>
+                <a data-type="upload" class="section CORADSearchSelector"><span class="shadow-font">Upload</span></a>
               </div>
           </div>
       </div>
