--- a/designSite/search/templates/paper.html
+++ b/designSite/search/templates/paper.html
@@ -1,88 +1,3 @@
-<!-- <html>
-
-<head>
-  <title>{{ projectName }} | {{ year }}-{{ teamName }} - Project detail - S-Din</title>
-  <link rel="shortcut icon" href="/static/img/favicon.png">
-  <link rel="stylesheet" href="/static/css/fontsize.css">
-  <link rel="stylesheet" href="/static/semantic/dist/semantic.min.css">
-  <link rel="stylesheet" href="/static/css/search_paper.css">
-</head>
-
-<body> -->
-<!-- top bar -->
-<!-- <div class="ui fixed menu" id="top-bar">
-    <div class="left item">
-      <div class="top-bar-item">
-        <h1>CO-RAD <span>Search</span></h1>
-      </div>
-    </div>
-    <div class="right item">
-      <div class="top-bar-item">
-        <h2><a href="/design">Design</a></h2>
-      </div>
-      <div class="top-bar-item">
-        <h2>Welcome, <a href="/account" class="username">{{ user.username }}</a> !</h2>
-      </div>
-    </div>
-  </div> -->
-
-<!-- Content -->
-<!-- <div class="Content">
-    <div class="content_title">
-      <img id="logo" src="/static/img/logo_gray.png">
-      <div class="ui icon input">
-        <input id="search-input" type="text" placeholder="Search...">
-        <i class="search icon"></i>
-      </div>
-      <div class="option"></div>
-      <div class="tools"></div>
-    </div>
-
-    <div class="content_detail">
-      <p class="title"><a href="{{ articleURL }}">{{ title }}</a></p>
-      <div class="detail">
-        <div class="top">
-          <h3>DOI: {{ DOI }} <span>JIF: {{ JIF }}</span></h3>
-          <h3>Author: {% for author in authors %} {{ author }} {% endfor %}</h3>
-          <h3 class="copyright">Copyright info: {{ copyright }}</h3>
-        </div>
-        <p class="abstract">
-          Abstract:<br>
-          <span>
-            {{ abstract }}
-          </span>
-        </p>
-        <div class="bottom">
-          <p class="keywords">Keywords: <span>{{ keywords }}</span></p>
-          <div class="ui selection dropdown parts">
-            Parts:
-            <input type="hidden" name="part">
-            <div class="default text">Parts</div>
-            <i class="dropdown icon"></i>
-            <div class="menu">
-              {% for p in part %}
-              <div class="item" data-value="0">{{p.BBa}}</div>
-              {% endfor %}
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</body>
-
-<script src="/static/js/jquery.min.js"></script>
-<script src="/static/js/jquery-ui/jquery-ui.min.js"></script>
-<script src="/static/js/jquery.mousewheel.min.js"></script>
-<script src="/static/semantic/dist/semantic.js"></script>
-<script src="/static/semantic/dist/components/popup.min.js"></script>
-<script src="/static/semantic/dist/components/tab.min.js"></script>
-<script src="/static/js/search.js"></script>
-<script>
-
-</script>
-
-</html> -->
 
 <html>
 
@@ -95,47 +10,70 @@
   <link rel="stylesheet" href="/static/css/fontsize.css">
   <link rel="stylesheet" href="/static/semantic/dist/semantic.min.css">
   <link rel="stylesheet" href="/static/semantic/dist/components/icon.min.css">
+  <link rel="stylesheet" href="/static/css/search.css">
   <link rel="stylesheet" href="/static/css/search_paper.css">
 </head>
 
 <body>
-  <div class="ui inverted fixed menu" id="nav">
-    <div class="ui container">
-      <div class="item">CO-RAD <span class="page-name">Search</span></div>
-      <div class="right menu">
-        <a class="item" href="/design">
-          Design
-        </a>
-        <span class="item">Welcome, <span class="username"> {{ user.username }} </span> !</span>
+   <!-- top bar -->
+   <div class="ui large top fixed menu" id="top-bar">
+      <div class="left item">
+          <div class="top-bar-item">
+              <img id="top-bar-logo" src="/static/img/logo_gray.png">
+          </div>
       </div>
-    </div>
+      <div class="right item">
+          <!-- <label id="design" class="button">DESIGN</label>
+          <label id="account" class="button">ACCOUNT</label> -->
+          <div class="top-bar-item">
+              <a href="/design">
+                  <h3>Design</h3>
+              </a>
+          </div>
+          <div class="top-bar-item">
+              <a href="/account">
+                  <h3>Welcome, <span class="username">{{ user.username }}</span> !</h3>
+              </a>
+          </div>
+      </div>
   </div>
 
-  <div id="search-box-container">
-    <div id="logo">
-      <a href="/">
-        <img class="ui fluid image" src="/static/img/logo.png" alt="CO-RAD">
-      </a>
-    </div>
-    <div id="search-box">
-      <div class="ui form">
-        <div class="field">
-          <div class="ui fluid icon input">
-            <input id="search-edit" type="text" placeholder="Search...">
-            <i id="search-icon" class="search icon"></i>
+  <!-- Search bar-->
+  <div class="content">
+      <div id="search-container">
+          <div class="ui two column grid">
+              <div class="column">
+                  <div class="ui fluid action input search-bar">
+                      <input style="border-radius: 0px !important;background-color: rgba(255,255,255,0.8);" type="text"
+                          id="search-content" placeholder="Search...">
+                      <button style="border-radius: 0px !important;" id="search" class="ui icon button squard invert">
+                          <i class="search icon"></i>
+                      </button>
+                  </div>
+              </div>
+              <div class="column middle aligned">
+                  <div class="ui breadcrumb search-choice-bar shadow-font">
+                      <a data-type="paper" class="selected section CORADSearchSelector"><span class="shadow-font">Paper</span></a>
+                      <div class="divider"></div>
+                      <a data-type="project" class="section CORADSearchSelector"><span class="shadow-font">Project</span></a>
+                      <div class="divider"></div>
+                      <a data-type="upload" class="section CORADSearchSelector"><span class="shadow-font">Upload</span></a>
+                  </div>
+              </div>
           </div>
-        </div>
+          <div class="four wide column search-choice-bar">
+           
+          </div>
       </div>
-    </div>
   </div>
   <div id="search-page-dimmer"></div>
 
-  <div id="detail-container">
+  <div class="shadow-box" id="detail-container">
     <div class="back-icon">
       <i class="chevron left link icon"></i>
     </div>
     <div class="back">
-      back
+      Back
     </div>
     <div class="title"><a target="paper" href="{{ articleURL }}">{{ title }}</a></div>
     <div class="paper-identity">
@@ -173,7 +111,7 @@
       </div>
     </div>
   </div>
-  <div id="right-panel">
+  <div class="shadow-box" id="right-panel">
     <h4 class="ui header">Authors</h4>
     <div class="ui list">
       {% for a in authors %}
