--- a/designSite/search/templates/work.html
+++ b/designSite/search/templates/work.html
@@ -1,4 +1,3 @@
-
 <html>
 
 <head>
@@ -18,35 +17,52 @@
     <!-- top bar -->
     <div class="ui large top fixed menu" id="top-bar">
         <div class="left item">
-        <div class="top-bar-item">
-            <img id="top-bar-logo" src="/static/img/logo_gray.png">
-        </div>
+            <div class="top-bar-item">
+                <img id="top-bar-logo" src="/static/img/logo_gray.png">
+            </div>
         </div>
         <div class="right item">
             <!-- <label id="design" class="button">DESIGN</label>
             <label id="account" class="button">ACCOUNT</label> -->
             <div class="top-bar-item">
-            <a href="/design">
-                <h3>Design</h3>
-            </a>
+                <a href="/design">
+                    <h3>Design</h3>
+                </a>
             </div>
             <div class="top-bar-item">
-            <a href="/account">
-                <h3>Welcome, <span class="username">{{ user.username }}</span> !</h3>
-            </a>
+                <a href="/account">
+                    <h3>Welcome, <span class="username">{{ user.username }}</span> !</h3>
+                </a>
             </div>
         </div>
     </div>
+
+    <!-- Search bar-->
     <div class="content">
         <div id="search-container">
-                <div class="four wide column">
-                    <div class="ui action input search-bar">
-                        <input style="border-radius: 0px !important;background-color: rgba(255,255,255,0.8);" type="text" id="search-content" placeholder="Search...">
+            <div class="ui two column grid">
+                <div class="column">
+                    <div class="ui fluid action input search-bar">
+                        <input style="border-radius: 0px !important;background-color: rgba(255,255,255,0.8);" type="text"
+                            id="search-content" placeholder="Search...">
                         <button style="border-radius: 0px !important;" id="search" class="ui icon button squard invert">
-                        <i class="search icon"></i>
+                            <i class="search icon"></i>
                         </button>
                     </div>
                 </div>
+                <div class="column middle aligned">
+                    <div class="ui breadcrumb search-choice-bar shadow-font">
+                        <a data-type="paper" class="selected section CORADSearchSelector"><span class="shadow-font">Paper</span></a>
+                        <div class="divider"></div>
+                        <a data-type="project" class="section CORADSearchSelector"><span class="shadow-font">Project</span></a>
+                        <div class="divider"></div>
+                        <a data-type="upload" class="section CORADSearchSelector"><span class="shadow-font">Upload</span></a>
+                    </div>
+                </div>
+            </div>
+            <div class="four wide column search-choice-bar">
+             
+            </div>
         </div>
     </div>
     <div id="search-page-dimmer"></div>
