--- a/designSite/static/css/search_work.css
+++ b/designSite/static/css/search_work.css
@@ -41,11 +41,7 @@ body {
   z-index: 1;
 }
 
-#search-container {
-  margin-top: 8rem;
-  width: 50rem;
-  position: relative;
-}
+
 
 #search-box {
   width: 44rem;
@@ -96,10 +92,10 @@ body {
   padding-right: 1.8rem;
   padding-bottom: 1rem;
   background-color: rgba(255, 255, 255, 0.8);
-  
   width: 50rem;
   position: relative;
 }
+
 #detail-container>.back-icon {
   position: absolute;
   top: 0;
@@ -163,7 +159,7 @@ body {
   font-family: Source Serif Pro;
 }
 #detail-container>.images {
-  height: 20rem;
+  height: 15rem;
   margin-left: 3rem;
   margin-right: 3rem;
   margin-bottom: 1rem;
@@ -172,7 +168,7 @@ body {
 }
 #detail-container>.images img {
   max-width: 25rem;
-  height: 18rem;
+  height: 80%;
   margin-right: 1.5rem;
 }
 #detail-container>.images>img:last-child {
@@ -186,6 +182,7 @@ body {
   font-size: 20px;
   font-weight: bold;
 }
+
 
 #part-container {
   height: 17rem;
@@ -271,12 +268,4 @@ div.ui.page.dimmer .content {
 html {
   overflow: scroll;
   overflow-x: hidden;
-}
-::-webkit-scrollbar {
-  width: 0px;  /* remove scrollbar space */
-  background: transparent;  /* optional: just make scrollbar invisible */
-}
-/* optional: show position indicator in red */
-::-webkit-scrollbar-thumb {
-  background: #FF0000;
 }
