--- a/designSite/account/templates/index.html
+++ b/designSite/account/templates/index.html
@@ -16,7 +16,7 @@
       <img class="logo" src="/static/img/logo.png">
     </a>
     <div class="right item">
-      <h5>Welcome, <span class="username">{{ user.username }}</span> !</h5>
+      <h5>Welcome, <a href="/account"><span class="username">{{ user.username }}</span></a> !</h5>
       <a id="logout" class="ui button">Log Out</a>
     </div>
   </div>
