--- a/designSite/design/templates/design.html
+++ b/designSite/design/templates/design.html
@@ -137,7 +137,7 @@
       {% endif %}
       <span id="logo" class="item">
         <b>
-          <span id="username"> Welcome, <span> {{ username }} </span> ! </span>
+          <span id="username"> Welcome, <a href="/account"><span> {{ username }} </span></a> ! </span>
         </b>
         <a href="/account/">
           <img src="/static/img/logo.png">
@@ -250,9 +250,8 @@
           </div>
           <h5 class="ui header description">DESCRIPTION</h5>
           <div id="part-info-des">
-            <p></p>
-            <div class="mini ui button" data-position="bottom right" id="show-part-src-seg-button" style="display:none">Source
-              Circuit</div>
+              <p></p>
+            <div class="mini ui middle button" data-position="bottom right" id="show-part-src-seg-button" style="display:none">Source Circuit</div>            
           </div>
         </div>
       </div>
