--- a/designSite/search/templates/search.html
+++ b/designSite/search/templates/search.html
@@ -12,12 +12,14 @@
 <body class="font-constantia">
   <!-- top bar -->
   <div class="ui large top fixed menu" id="top-bar">
-      <div class="left item">
+      <div class="item left">
         <div class="top-bar-item">
+          <a href="/">
             <img id="top-bar-logo" src="/static/img/logo_gray.png">
+          </a>
         </div>
       </div>
-      <div class="right item">
+      <div class="item right">
           <!-- <label id="design" class="button">DESIGN</label>
           <label id="account" class="button">ACCOUNT</label> -->
           <div class="top-bar-item">
@@ -47,7 +49,7 @@
                 </button>
               </div>
             </div>
-            <div class="ui breadcrumb">
+            <div class="ui twelve wide column breadcrumb">
                 <a data-type="paper" class="selected section CORADSearchSelector"><span class="shadow-font">Paper</span></a>
                 <div class="divider"></div>
                 <a data-type="project" class="section CORADSearchSelector"><span class="shadow-font">Project</span></a>
