--- a/designSite/account/templates/personal_index.html
+++ b/designSite/account/templates/personal_index.html
@@ -18,7 +18,7 @@
           <img class="logo" src="/static/img/logo.png">
         </a>
         <div class="right item">
-          <h5>Welcome, <span> {{ user.username }} </span>!</h5>
+          <h5>Welcome, <a href="/account"><span> {{ user.username }} </span></a>!</h5>
         </div>
         <div class="item">
           <a id="logout" class="ui inverted button">Log Out</a>
