--- a/designSite/static/css/design.css
+++ b/designSite/static/css/design.css
@@ -59,7 +59,6 @@
 .window>.nav {
   padding: 0.5rem;
   height: 2rem;
-  border-bottom: 1px solid;
 }
 
 .window>.nav>i {
@@ -85,7 +84,7 @@
 }
 
 #search-parts-dropdown {
-  font-family: 'Times New Roman', Times, serif;
+  font-family: 'Source Sans Pro','Helvetica Neue',Arial,Helvetica,sans-serif;
 }
 
 #part-info-tab {
@@ -102,17 +101,15 @@
   padding: 12px;
   margin-top: 5px;
   background-color: #c0a6a9;
-  border: 1px solid #000000;
   text-align: center;
   font-size: 20px;
   font-weight: bold;
-  font-family: 'Times New Roman', Times, serif;
+  font-family: 'Source Sans Pro','Helvetica Neue',Arial,Helvetica,sans-serif;
 }
 
 .ui.top.attached.tabular.menu {
   background-color: #c0a6a9;
-  border: 1px solid #000000 !important;
-  font-family: 'Times New Roman', Times, serif;
+  font-family: 'Source Sans Pro','Helvetica Neue',Arial,Helvetica,sans-serif;
 }
 
 .ui.top.attached.tabular.menu>.active.item {
@@ -126,7 +123,7 @@
   margin-left: -1rem;
   padding: 1rem 0 0.5rem 1rem;
   width: 100%;
-  border: 1px solid #000000;
+  /* border: 1px solid #000000; */
   background-color: #ffffff;
 }
 
@@ -333,7 +330,7 @@ div.ui.fixed.menu>div.container>.item>div.ui.dropdown {
 }
 
 div.part-helper {
-  border: 1px solid black;
+  /* border: 1px solid black; */
   background-color: white;
   width: 100px;
   text-align: center;
@@ -433,9 +430,6 @@ div.ui.fixed.menu {
   background-color: #ffffff;
 }
 
-div.ui.fixed.menu {
-  border: 1px solid #000000 !important;
-}
 
 .ui.vertical.menu {
   background-color: #a83140;
@@ -457,7 +451,7 @@ div h5,
 #part-info-name {
   color: black;
   text-align: center;
-  font-family: 'Times New Roman', Times, serif;
+  font-family: 'Source Sans Pro','Helvetica Neue',Arial,Helvetica,sans-serif;
 }
 
 .search-header {
@@ -469,7 +463,7 @@ div h5,
 }
 
 .default.text {
-  font-family: 'Times New Roman', Times, serif;
+  font-family: 'Source Sans Pro','Helvetica Neue',Arial,Helvetica,sans-serif
 }
 
 #advanced-search-button {
@@ -488,7 +482,7 @@ div h5,
   min-width: 180px;
   margin-left: 10px;
   margin-top: 5px;
-  font-family: 'Times New Roman', Times, serif;
+  font-family: 'Source Sans Pro','Helvetica Neue',Arial,Helvetica,sans-serif
   font-size: 15px;
   font-weight: bold;
 }
@@ -537,7 +531,7 @@ div h5,
   color: #000000;
 }
 
-#username>span {
+#username span {
   color: #a83140;
   text-decoration: underline;
 }
@@ -585,4 +579,15 @@ div h5,
 
 .authority-delete:hover {
   cursor: pointer;
+}
+
+#part-info-des{
+  text-align: center;
+}
+#part-info-des > span {
+  text-align: left;
+}
+
+#show-part-src-seg-button {
+  margin: 0 auto;
 }
